1. Метод .uf [#70623 #343631]